--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.5
   riverpod: 
+  hive: 
+  mobx:
+  flutter_mobx:
   
 
 dev_dependencies:
